--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,46 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>3.0.0</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.security.oauth/spring-security-oauth2 -->
+		<!-- https://mvnrepository.com/artifact/org.springframework.security.oauth/spring-security-oauth2 -->
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.security.oauth</groupId>-->
+<!--			<artifactId>spring-security-oauth2</artifactId>-->
+<!--			<version>2.3.5.RELEASE</version>-->
+<!--						<exclusions>-->
+<!--							<exclusion>-->
+<!--								<groupId>org.glassfish.jaxb</groupId>-->
+<!--								<artifactId>jaxb-runtime</artifactId>-->
+<!--							</exclusion>-->
+<!--						</exclusions>-->
+<!--		</dependency>-->
+
+
+<!--		<dependency>-->
+<!--			<groupId>javax.xml.bind</groupId>-->
+<!--			<artifactId>jaxb-api</artifactId>-->
+<!--			<version>2.3.0</version>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>com.sun.xml.bind</groupId>-->
+<!--			<artifactId>jaxb-core</artifactId>-->
+<!--			<version>2.3.0</version>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>com.sun.xml.bind</groupId>-->
+<!--			<artifactId>jaxb-impl</artifactId>-->
+<!--			<version>2.3.0</version>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>javax.activation</groupId>-->
+<!--			<artifactId>activation</artifactId>-->
+<!--			<version>1.1.1</version>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>org.glassfish.jaxb</groupId>-->
+<!--			<artifactId>jaxb-runtime</artifactId>-->
+<!--			<version>2.3.1</version>-->
+<!--		</dependency>-->
 
 	</dependencies>
 
@@ -91,6 +131,26 @@
 					</excludes>
 				</configuration>
 			</plugin>
+<!--			<plugin>-->
+<!--			<groupId>org.jvnet.jaxb2.maven2</groupId>-->
+<!--			<artifactId>maven-jaxb2-plugin</artifactId>-->
+<!--			<version>0.14.0</version>-->
+
+<!--			</plugin>-->
+<!--			<plugin>-->
+<!--			<groupId>org.jvnet.jaxb2.maven2</groupId>-->
+<!--			<artifactId>maven-jaxb2-plugin</artifactId>-->
+<!--			<version>0.14.0</version>-->
+<!--			<dependencies>-->
+<!--				<dependency>-->
+<!--					<groupId>org.glassfish.jaxb</groupId>-->
+<!--					<artifactId>jaxb-runtime</artifactId>-->
+<!--					<version>2.3.3</version>-->
+<!--				</dependency>-->
+<!--			</dependencies>-->
+<!--			<executions>-->
+<!--			</executions>-->
+<!--			</plugin>-->
 		</plugins>
 	</build>
 
