--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,16 @@
 # Global
 server.port=8181
 server.servlet.context-path=/gorestapp
-# url to test the application with swager UI : http://localhost:8181/gorestapp/swagger-ui.html#/
-
 
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+#oauth properties
+#================
+#user.oauth.clientId=javadevjournal
+#user.oauth.clientSecret=1234$#@!
+#user.oauth.redirectUris=http://localhost:8081/login
+#user.oauth.user.username=javadevjournal
+#user.oauth.user.password=javadevjournal
+#user.oauth.accessTokenValidity=300
+#user.oauth.refreshTokenValidity=240000
 
