--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<name>gorestapp</name>
 	<description>Demo project for integrating with gorest api</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
 
@@ -76,17 +76,17 @@
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.springframework.security.oauth/spring-security-oauth2 -->
 		<!-- https://mvnrepository.com/artifact/org.springframework.security.oauth/spring-security-oauth2 -->
-<!--		<dependency>-->
-<!--			<groupId>org.springframework.security.oauth</groupId>-->
-<!--			<artifactId>spring-security-oauth2</artifactId>-->
-<!--			<version>2.3.5.RELEASE</version>-->
-<!--						<exclusions>-->
-<!--							<exclusion>-->
-<!--								<groupId>org.glassfish.jaxb</groupId>-->
-<!--								<artifactId>jaxb-runtime</artifactId>-->
-<!--							</exclusion>-->
-<!--						</exclusions>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>org.springframework.security.oauth</groupId>
+			<artifactId>spring-security-oauth2</artifactId>
+			<version>2.3.5.RELEASE</version>
+						<exclusions>
+							<exclusion>
+								<groupId>org.glassfish.jaxb</groupId>
+								<artifactId>jaxb-runtime</artifactId>
+							</exclusion>
+						</exclusions>
+		</dependency>
 
 
 <!--		<dependency>-->
@@ -120,17 +120,16 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.0</version>
 				<configuration>
-					<excludes>
-						<exclude>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-						</exclude>
-					</excludes>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
+
+
 <!--			<plugin>-->
 <!--			<groupId>org.jvnet.jaxb2.maven2</groupId>-->
 <!--			<artifactId>maven-jaxb2-plugin</artifactId>-->
