--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,11 +6,11 @@ spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 #oauth properties
 #================
-#user.oauth.clientId=javadevjournal
-#user.oauth.clientSecret=1234$#@!
-#user.oauth.redirectUris=http://localhost:8081/login
-#user.oauth.user.username=javadevjournal
-#user.oauth.user.password=javadevjournal
-#user.oauth.accessTokenValidity=300
-#user.oauth.refreshTokenValidity=240000
+user.oauth.clientId=gorestapp
+user.oauth.clientSecret=1234$#@!
+user.oauth.redirectUris=http://localhost:8081/login
+user.oauth.user.username=gorestapp
+user.oauth.user.password=gorestapp
+user.oauth.accessTokenValidity=300
+user.oauth.refreshTokenValidity=240000
 
